--- a/gradle/alfi/setup-alf-workspace.gradle
+++ b/gradle/alfi/setup-alf-workspace.gradle
@@ -6,20 +6,22 @@ task setupAlfWorkspace {
     doLast {
         file(targetDirectory).deleteDir()
         file(targetDirectory).mkdir()
+        file("$targetDirectory/hamster").mkdir()
+        file("$targetDirectory/swc").mkdir()
 
         def jarWithHamsterAlfFiles = file("$buildDir/artifacts/mps-alfi-samples/mps-alfi-samples/languages/hamster-simulator-language/HamsterSimulatorLanguage.sandbox-src.jar")
         copy {
             from(zipTree(jarWithHamsterAlfFiles)){
                 include 'HamsterSimulatorLanguage/sandbox/**/*.alf'
             }
-            into file("$targetDirectory")
+            into file("$targetDirectory/hamster")
             eachFile { FileCopyDetails details ->
                 details.path = details.path.replaceFirst('HamsterSimulatorLanguage/sandbox/', '')
             }
             includeEmptyDirs = false
 
             // workaround: test suite generation has to be adjusted, until so, we add a manual activity for this
-            file("$targetDirectory/HamsterTestSuiteActivity.alf").text = """
+            file("$targetDirectory/hamster/HamsterTestSuiteActivity.alf").text = """
             activity HamsterTestSuiteActivity() {
                 new HamsterTestSuite().Demo();
                 WriteLine("FINISHED");
@@ -27,19 +29,19 @@ task setupAlfWorkspace {
             """
         }
 
-        def jarWithSwcAlfFiles = file("$buildDir/artifacts/mps-alfi-samples/mps-alfi-samples/languages/software-component-language/HamsterSimulatorLanguage.sandbox-src.jar")
+        def jarWithSwcAlfFiles = file("$buildDir/artifacts/mps-alfi-samples/mps-alfi-samples/languages/software-component-language/SoftwareComponentLanguage.sandbox-src.jar")
         copy {
             from(zipTree(jarWithSwcAlfFiles)){
-                include 'HamsterSimulatorLanguage/sandbox/**/*.alf'
+                include 'SoftwareComponentLanguage/sandbox/**/*.alf'
             }
-            into file("$targetDirectory")
+            into file("$targetDirectory/swc")
             eachFile { FileCopyDetails details ->
-                details.path = details.path.replaceFirst('HamsterSimulatorLanguage/sandbox/', '')
+                details.path = details.path.replaceFirst('SoftwareComponentLanguage/sandbox/', '')
             }
             includeEmptyDirs = false
 
             // workaround: test suite generation has to be adjusted, until so, we add a manual activity for this
-            file("$targetDirectory/Webstore_ComponentTestActivity.alf").text = """
+            file("$targetDirectory/swc/Webstore_ComponentTestActivity.alf").text = """
             activity Webstore_ComponentTestActivity() {
                 new Webstore_ComponentTest().testCase();
                 WriteLine("FINISHED");
