--- a/build.xml
+++ b/build.xml
@@ -536,14 +536,18 @@
       <module namespace="SoftwareComponentLanguage.sandbox" type="solution" uuid="b4a24014-52d7-42db-bd13-252ce7475af2">
         <dependencies>
           <module ref="103422e1-9f03-485c-abe2-b87ca54f94a9(SoftwareComponentLanguage.runtime)" kind="rt" />
+          <module ref="e9b40a72-6930-481d-bdce-a0a866bf715e(alfi.StandardModelLibrary)" kind="rt" />
           <module ref="96bc4b20-de7f-4b1c-9959-6c6f1e9b78cf(AlfiSamples.genplan)" kind="cl" />
           <module ref="49808fad-9d41-4b96-83fa-9231640f6b2b(JUnit)" kind="cl" />
+          <module ref="bf897046-1e4e-4c49-b9d6-a7ab6d3f8703(alfi)" kind="cl" />
           <module ref="e9b40a72-6930-481d-bdce-a0a866bf715e(alfi.StandardModelLibrary)" kind="cl" />
+          <module ref="d0e1230a-72e3-4b6b-88f2-98d924f7de11(alfi.toBaseLanguage)" kind="cl" />
           <module ref="63b449db-0918-4a4a-a891-2c430ab133e4(org.junit.junit5)" kind="cl" />
         </dependencies>
         <uses>
           <language id="l:90dba4c7-2c2e-4bec-a587-6476e412e28c:SoftwareComponentLanguage" />
           <language id="l:bf897046-1e4e-4c49-b9d6-a7ab6d3f8703:alfi" />
+          <language id="l:d0e1230a-72e3-4b6b-88f2-98d924f7de11:alfi.toBaseLanguage" />
         </uses>
         <classpath>
           <entry path="." />
@@ -598,21 +602,21 @@
     </echoxml>
     <jar destfile="${build.layout}/mps-alfi-samples/languages/build/AlfiSamples.genplan.jar" duplicate="preserve">
       <fileset dir="${build.tmp}/java/out/AlfiSamples.genplan" />
-      <fileset dir="${basedir}/solutions/AlfiSamples.genplan/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
+      <fileset dir="${basedir}/solutions/AlfiSamples.Genplan/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
       <fileset dir="${build.tmp}/default/AlfiSamples.genplan.jar" />
     </jar>
-    <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-AlfiSamples.genplan-models">
-      <fileset dir="${basedir}/solutions/AlfiSamples.genplan/models" includes="**/*.mps, **/*.mpsr, **/.model" />
+    <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-AlfiSamples.Genplan-models">
+      <fileset dir="${basedir}/solutions/AlfiSamples.Genplan/models" includes="**/*.mps, **/*.mpsr, **/.model" />
     </copyModels>
     <jar destfile="${build.layout}/mps-alfi-samples/languages/build/AlfiSamples.genplan-src.jar" duplicate="preserve">
-      <fileset dir="${basedir}/solutions/AlfiSamples.genplan/source_gen">
+      <fileset dir="${basedir}/solutions/AlfiSamples.Genplan/source_gen">
         <exclude name="**/trace.info" />
         <exclude name="**/exports" />
         <exclude name="**/checkpoints" />
         <exclude name="**/*.mps" />
       </fileset>
       <zipfileset file="${basedir}/solutions/AlfiSamples.genplan/AlfiSamples.genplan.msd" prefix="module" />
-      <zipfileset dir="${build.tmp}/customProcessors/copyModels/solutions-AlfiSamples.genplan-models" prefix="module/models" />
+      <zipfileset dir="${build.tmp}/customProcessors/copyModels/solutions-AlfiSamples.Genplan-models" prefix="module/models" />
     </jar>
     <mkdir dir="${build.layout}/mps-alfi-samples/lib" />
     <copy todir="${build.layout}/mps-alfi-samples/lib">
@@ -1119,14 +1123,18 @@
       <module namespace="SoftwareComponentLanguage.sandbox" type="solution" uuid="b4a24014-52d7-42db-bd13-252ce7475af2">
         <dependencies>
           <module ref="103422e1-9f03-485c-abe2-b87ca54f94a9(SoftwareComponentLanguage.runtime)" kind="rt" />
+          <module ref="e9b40a72-6930-481d-bdce-a0a866bf715e(alfi.StandardModelLibrary)" kind="rt" />
           <module ref="96bc4b20-de7f-4b1c-9959-6c6f1e9b78cf(AlfiSamples.genplan)" kind="cl" />
           <module ref="49808fad-9d41-4b96-83fa-9231640f6b2b(JUnit)" kind="cl" />
+          <module ref="bf897046-1e4e-4c49-b9d6-a7ab6d3f8703(alfi)" kind="cl" />
           <module ref="e9b40a72-6930-481d-bdce-a0a866bf715e(alfi.StandardModelLibrary)" kind="cl" />
+          <module ref="d0e1230a-72e3-4b6b-88f2-98d924f7de11(alfi.toBaseLanguage)" kind="cl" />
           <module ref="63b449db-0918-4a4a-a891-2c430ab133e4(org.junit.junit5)" kind="cl" />
         </dependencies>
         <uses>
           <language id="l:90dba4c7-2c2e-4bec-a587-6476e412e28c:SoftwareComponentLanguage" />
           <language id="l:bf897046-1e4e-4c49-b9d6-a7ab6d3f8703:alfi" />
+          <language id="l:d0e1230a-72e3-4b6b-88f2-98d924f7de11:alfi.toBaseLanguage" />
         </uses>
         <classpath>
           <entry path="." />
@@ -1181,21 +1189,21 @@
     </echoxml>
     <jar destfile="${build.tmp}/default/mps-alfi-samples.zip/mps-alfi-samples/languages/build/AlfiSamples.genplan.jar" duplicate="preserve">
       <fileset dir="${build.tmp}/java/out/AlfiSamples.genplan" />
-      <fileset dir="${basedir}/solutions/AlfiSamples.genplan/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
+      <fileset dir="${basedir}/solutions/AlfiSamples.Genplan/source_gen" includes="**/trace.info, **/exports, **/*.mps, **/checkpoints" />
       <fileset dir="${build.tmp}/default/AlfiSamples.genplan.jar1" />
     </jar>
-    <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-AlfiSamples.genplan-models1">
-      <fileset dir="${basedir}/solutions/AlfiSamples.genplan/models" includes="**/*.mps, **/*.mpsr, **/.model" />
+    <copyModels todir="${build.tmp}/customProcessors/copyModels/solutions-AlfiSamples.Genplan-models1">
+      <fileset dir="${basedir}/solutions/AlfiSamples.Genplan/models" includes="**/*.mps, **/*.mpsr, **/.model" />
     </copyModels>
     <jar destfile="${build.tmp}/default/mps-alfi-samples.zip/mps-alfi-samples/languages/build/AlfiSamples.genplan-src.jar" duplicate="preserve">
-      <fileset dir="${basedir}/solutions/AlfiSamples.genplan/source_gen">
+      <fileset dir="${basedir}/solutions/AlfiSamples.Genplan/source_gen">
         <exclude name="**/trace.info" />
         <exclude name="**/exports" />
         <exclude name="**/checkpoints" />
         <exclude name="**/*.mps" />
       </fileset>
       <zipfileset file="${basedir}/solutions/AlfiSamples.genplan/AlfiSamples.genplan.msd" prefix="module" />
-      <zipfileset dir="${build.tmp}/customProcessors/copyModels/solutions-AlfiSamples.genplan-models1" prefix="module/models" />
+      <zipfileset dir="${build.tmp}/customProcessors/copyModels/solutions-AlfiSamples.Genplan-models1" prefix="module/models" />
     </jar>
     <zip destfile="${build.layout}/mps-alfi-samples.zip">
       <zipfileset file="${platform_lib}/idea_rt.jar" prefix="mps-alfi-samples/lib" />
@@ -1382,12 +1390,12 @@
   <target name="makeDependents" />
   
   <target name="java.compile.AlfiSamples.genplan" depends="fetchDependencies">
-    <mkdir dir="${basedir}/solutions/AlfiSamples.genplan/source_gen" />
+    <mkdir dir="${basedir}/solutions/AlfiSamples.Genplan/source_gen" />
     <mkdir dir="${build.tmp}/java/out/AlfiSamples.genplan" />
     <javac destdir="${build.tmp}/java/out/AlfiSamples.genplan" fork="true" encoding="utf8" includeantruntime="false" debug="true">
       <compilerarg value="-Xlint:none" />
       <src>
-        <path location="${basedir}/solutions/AlfiSamples.genplan/source_gen" />
+        <path location="${basedir}/solutions/AlfiSamples.Genplan/source_gen" />
       </src>
       <classpath>
         <fileset file="${artifacts.mps}/lib/mps-core.jar" />
@@ -1409,7 +1417,7 @@
       </classpath>
     </javac>
     <copy todir="${build.tmp}/java/out/AlfiSamples.genplan">
-      <fileset dir="${basedir}/solutions/AlfiSamples.genplan/source_gen" excludes="**/*.java" />
+      <fileset dir="${basedir}/solutions/AlfiSamples.Genplan/source_gen" excludes="**/*.java" />
     </copy>
   </target>
   
@@ -1799,8 +1807,11 @@
         <fileset file="${artifacts.mps}/lib/annotations.jar" />
         <fileset file="${artifacts.mps}/lib/util-8.jar" />
         <fileset file="${artifacts.mps}/lib/util_rt.jar" />
+        <fileset file="${artifacts.alfi-build}/alfi/languages/alfi-modules/alfi.jar" />
         <fileset file="${artifacts.alfi-build}/alfi/languages/alfi-modules/alfi.StandardModelLibrary.jar" />
         <fileset file="${artifacts.alfi-build}/alfi/languages/alfi-modules/alfi.StandardModelLibraryStubs.jar" />
+        <fileset file="${artifacts.alfi-build}/alfi/languages/alfi-modules/alfi.toBaseLanguage.jar" />
+        <fileset file="${artifacts.mps}/plugins/mps-core/languages/util/jetbrains.mps.execution.util.jar" />
         <fileset file="${artifacts.alfi-build}/tests/idea_rt.jar" />
         <fileset file="${artifacts.alfi-build}/dependencies/alfi/lib/StandardModelLibraryStubs.jar" />
         <fileset dir="${artifacts.mps}/plugins/mps-testing/languages/junit5/lib" includes="apiguardian-api-1.1.2.jar" />
@@ -1822,7 +1833,7 @@
   </target>
   
   <target name="cleanSources">
-    <delete dir="${basedir}/solutions/AlfiSamples.genplan/source_gen" />
+    <delete dir="${basedir}/solutions/AlfiSamples.Genplan/source_gen" />
     <delete dir="${basedir}/languages/HamsterSimulatorLanguage/source_gen" />
     <delete dir="${basedir}/languages/HamsterSimulatorLanguage/generator/source_gen" />
     <delete dir="${basedir}/solutions/HamsterSimulatorLanguage.runtime/source_gen" />
