--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ ext.languageName = "AlfiSampleLanguage"
 ext.mpsPlugins = [  ]
 
 ext.customMpsPlugins = [
-    "alfi": "https://github.com/vimotest/mps-alfi/releases/download/1.0.0-alpha7/alfi.zip"
+    "alfi": "https://github.com/vimotest/mps-alfi/releases/download/1.0.0-alpha8/alfi.zip"
 ]
 
 apply from: 'gradle/init-gradle-scripts.gradle'
@@ -16,15 +16,10 @@ task prepareMps {
     dependsOn 'buildOsSpecificBundle'
 }
 
-task fixCopyStandardModelLibraryStubs {
+task fixCopyAlfiRuntimeJarPaths {
     group 'other'
-    description 'Workaround for wrong lookup of StandardModelLibraryStubs.jar'
+    description 'Workaround for wrong lookup of idea_rt.jar'
     doLast {
-        delete "$buildDir/mps-bundle/dependencies/dependencies/alfi"
-        copy {
-            from "$buildDir/mps-bundle/dependencies/alfi/lib/"
-            into "$buildDir/mps-bundle/dependencies/dependencies/alfi/lib/"
-        }
         delete "$buildDir/mps-bundle/dependencies/tests"
         copy {
             from "$mpsHome/lib/idea_rt.jar"
@@ -35,7 +30,7 @@ task fixCopyStandardModelLibraryStubs {
 
 task mpsBuild {
     group 'mps'
-    dependsOn 'mpsAntGenerate', 'mpsAntBuild', fixCopyStandardModelLibraryStubs
+    dependsOn 'mpsAntGenerate', 'mpsAntBuild', fixCopyAlfiRuntimeJarPaths
 }
 
 task mpsClean {
