--- a/.github/workflows/workflow-build.yaml
+++ b/.github/workflows/workflow-build.yaml
@@ -37,18 +37,6 @@ jobs:
         env:
           DISPLAY: :1
 
-      # Run Java Generations
-      - name: Test Java Hamster Program
-        run: sh ./gradlew executeJavaHamsterTests
-      - name: Test Java SWC Program
-        run: sh ./gradlew executeJavaSwcTests
-
-      # Run ALF Generations
-      - name: Test ALF Hamster Program
-        run: sh ./gradlew executeAlfHamsterTests
-      - name: Test ALF SWC Tests
-        run: sh ./gradlew executeAlfSwcTests
-
       # Stop Xvfb
       - name: Tear down xvfb
         run: killall Xvfb
@@ -68,5 +56,66 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: alfi-samples-code
-          path: |
-            build/code-gen
+          path: build/code-gen
+
+  executeAlf:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - uses: actions/checkout@v3
+
+      - name: Download Code
+        uses: actions/download-artifact@v3
+        with:
+          name: alfi-samples-code
+          path: build/code-gen
+
+      - name: Install alf
+        run: sh ./gradlew installAlf
+
+      # Run ALF Tests
+      - name: Test ALF Hamster Program
+        run: sh ./gradlew executeAlfHamsterTests
+      - name: Test ALF SWC Tests
+        run: sh ./gradlew executeAlfSwcTests
+
+  buildAndExecuteJava:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - uses: actions/checkout@v3
+
+      - name: Download Code
+        uses: actions/download-artifact@v3
+        with:
+          name: alfi-samples-code
+          path: build/code-gen
+
+      - name: Make Gradlew Executable from Gradle task
+        run: chmod +x ./gradlew
+
+      # Build Java Programs
+      - name: Build Java Hamster Program
+        run: sh ./gradlew buildJavaHamsterProject
+      - name: Build Java SWC Program
+        run: sh ./gradlew buildJavaSoftwareComponentProject
+
+      # Run Java Tests
+      - name: Test Java Hamster Program
+        run: sh ./gradlew executeJavaHamsterTests
+      - name: Test Java SWC Program
+        run: sh ./gradlew executeJavaSoftwareComponentTests
