--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ ext.languageName = "AlfiSampleLanguage"
 ext.mpsPlugins = [  ]
 
 ext.customMpsPlugins = [
-    "alfi": "https://github.com/vimotest/mps-alfi/releases/download/1.0.4-alpha1/alfi.zip",
+    "alfi": "https://github.com/vimotest/mps-alfi/releases/download/1.0.4-alpha3/alfi.zip",
     "CppBaseLanguage": "https://github.com/Fumapps/CppBaseLanguage/releases/download/2024.1-beta1/CppBaseLanguage.zip"
 ]
 
@@ -17,21 +17,9 @@ task prepareMps {
     dependsOn 'buildOsSpecificBundle'
 }
 
-task fixCopyAlfiRuntimeJarPaths {
-    group 'other'
-    description 'Workaround for wrong lookup of idea_rt.jar'
-    doLast {
-        delete "$buildDir/mps-bundle/dependencies/tests"
-        copy {
-            from "$mpsHome/lib/idea_rt.jar"
-            into "$buildDir/mps-bundle/dependencies/tests/"
-        }
-    }
-}
-
 task mpsBuild {
     group 'mps'
-    dependsOn 'mpsAntGenerate', 'mpsAntBuild', fixCopyAlfiRuntimeJarPaths
+    dependsOn 'mpsAntGenerate', 'mpsAntBuild'
 }
 
 task mpsClean {
