--- a/scripts/swc/java/build.gradle
+++ b/scripts/swc/java/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation 'org.junit.platform:junit-platform-launcher:1.7.0'
+    testImplementation 'org.junit.vintage:junit-vintage-engine:5.7.0'
 }
 
 sourceSets {
