--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ ext.mpsPlugins = [  ]
 
 ext.customMpsPlugins = [
     "alfi": "https://github.com/vimotest/mps-alfi/releases/download/1.1.4/alfi.zip",
-    "CppBaseLanguage": "https://github.com/Fumapps/CppBaseLanguage/releases/download/2024.1.3/CppBaseLanguage.zip"
+    "CppBaseLanguage": "https://github.com/Fumapps/CppBaseLanguage/releases/download/2024.1.3/CppBaseLanguage.zip",
+    "CsBaseLanguage": "https://github.com/Fumapps/CsBaseLanguage/releases/download/2024.1.2-beta1/CsBaseLanguage.zip"
 ]
 
 apply from: 'gradle/init-gradle-scripts.gradle'
