--- a/scripts/hamster/cs/HamsterHello.csproj
+++ b/scripts/hamster/cs/HamsterHello.csproj
@@ -3,10 +3,12 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <RootNamespace>Alfi.Hamster</RootNamespace>
+    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
   </PropertyGroup>
   <Import Project="HamsterSimulatorLanguage/sandbox/HamsterSimulatorLanguage.sandbox.props" />
 
   <ItemGroup>
-    <Compile Include="HamsterSimulatorLanguage/sandbox/ActivityDemoMain.cs" />
+    <Compile Include="HamsterSimulatorLanguage/sandbox/ActivityHelloPauleMain.cs" />
+    <Compile Include="../../standardModelLibrary/**/*.cs" />
   </ItemGroup>
 </Project>
