--- a/.github/workflows/workflow-build.yaml
+++ b/.github/workflows/workflow-build.yaml
@@ -161,3 +161,39 @@ jobs:
         run: sh ./gradlew executeCppHamsterTests
       - name: Test C++ SWC Program
         run: sh ./gradlew executeCppSoftwareComponentTests
+
+  buildAndExecuteCs:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - uses: actions/checkout@v3
+
+      - name: Download Code
+        uses: actions/download-artifact@v4
+        with:
+          name: alfi-samples-code
+          path: build/code-gen
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.0.x'
+
+      # Build C# Programs
+      - name: Build C# Hamster Program
+        run: sh ./gradlew buildCsHamsterProject
+      - name: Build C# SWC Program
+        run: sh ./gradlew buildCsSoftwareComponentProject
+
+      # Run C# Tests
+      - name: Test C# Hamster Program
+        run: sh ./gradlew executeCsHamsterTests
+      - name: Test C# SWC Program
+        run: sh ./gradlew executeCsSoftwareComponentTests
