GitHub Actions: use JDK 21 and refactor env-variables

--- a/.github/workflows/workflow-build.yaml
+++ b/.github/workflows/workflow-build.yaml
@@ -6,6 +6,9 @@ on:
 env:
   PROJECT_NAME: "mps-alfi-samples"
   ARCHIVE_NAME: "mps-alfi-samples"
+  DOTNET_VERSION: '9.0.x'
+  JAVA_VERSION: '21'
+  CMAKE_VERSION: '3.17.x'
 
 jobs:
   build:
@@ -13,10 +16,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: ${{ env.JAVA_VERSION }}
           distribution: 'adopt'
 
       # Install Xvfb for avoiding X11 window server AWTError when running tests (https://arbitrary-but-fixed.net/2022/01/21/headless-gui-github-actions.html)
@@ -63,10 +66,10 @@ jobs:
     needs: build
 
     steps:
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: ${{ env.JAVA_VERSION }}
           distribution: 'adopt'
 
       - uses: actions/checkout@v3
@@ -91,10 +94,10 @@ jobs:
     needs: build
 
     steps:
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: ${{ env.JAVA_VERSION }}
           distribution: 'adopt'
 
       - uses: actions/checkout@v3
@@ -125,10 +128,10 @@ jobs:
     needs: build
 
     steps:
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: ${{ env.JAVA_VERSION }}
           distribution: 'adopt'
 
       - uses: actions/checkout@v3
@@ -142,7 +145,7 @@ jobs:
       - name: Setup CMake
         uses: jwlawson/actions-setup-cmake@v1.5
         with:
-          cmake-version: '3.17.x'
+          cmake-version: ${{ env.CMAKE_VERSION }}
 
       - name: Verify CMake installation
         run: which cmake
@@ -167,10 +170,10 @@ jobs:
     needs: build
 
     steps:
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'adopt'
 
       - uses: actions/checkout@v3
@@ -184,7 +187,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.x'
+          dotnet-version: ${{ env.DOTNET_VERSION }}
 
       # Build C# Programs
       - name: Build C# Hamster Program
