--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ ext.mpsPlugins = [  ]
 ext.customMpsPlugins = [
     "alfi": "https://github.com/vimotest/mps-alfi/releases/download/1.1.5/alfi.zip",
     "CppBaseLanguage": "https://github.com/Fumapps/CppBaseLanguage/releases/download/2024.1.3/CppBaseLanguage.zip",
-    "CsBaseLanguage": "https://github.com/Fumapps/CsBaseLanguage/releases/download/2024.1.2-beta3/CsBaseLanguage.zip"
+    "CsBaseLanguage": "https://github.com/Fumapps/CsBaseLanguage/releases/download/2024.1.2/CsBaseLanguage.zip"
 ]
 
 apply from: 'gradle/init-gradle-scripts.gradle'
